welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: ')' expected but 'else' found.
else if (you <= 2 || date <= 2 ) {return 0}
^